# chess-classifier

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
chess_classifier/data/: __init__.py  df_loader.py  features.py  preprocess.py
chess_classifier/evaluation/: __init__.py  eval.py
chess_classifier/models/: __init__.py  xgb.py
configs/: predict.yaml  train.yaml
notebooks/: 01_exploration.ipynb  02_elo_baseline.ipynb  03_material_baseline.ipynb  04_board_baseline.ipynb  05_xgboost_baseline.ipynb  06_cnn_baseline.ipynb  n_data_processing.ipynb
scripts/: first_clock_presence.py  predict_fen_probs.py  train_xgb_classifier.py
